--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
-    <link rel="stylesheet" href="/styles/home.css"
+    <link rel="stylesheet" href="/styles/home.css">
+
+    <!---goole fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Poppins:wght@300;400;500;600;700&family=Sono:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav >
         <div class="logo">Ledi Li</div>
-        <ul>
-            <li><a href="index.html"></a>Home</li>
-            <li>Projects</li>
-            <li>Contact</li>
-            <li>About</li>
+        <ul class="nav-links">
+            <li><a href="#">Home</li>
+            <li><a href="/pages/projects.html">Projects</li>
+            <li><a href="/pages/contact.html">Contact</li>
+            <li><a href="/pages/about.html">About</li>
         </ul>
         <div>
-
-        </div>
-    </nav>
     </header>
 </body>
 </html>
