adjust the layout and add content to home page

--- a/index.html
+++ b/index.html
@@ -41,17 +41,21 @@
 
 
     <section class="profile" id="profile">
+        <div>
+            <img src="/assets/profile_image.jpg" alt="profile photo" class="profile-image">
+        </div>
         <div class="profile-text">
             <h1><span>Student</span></h1>
-            <h5><a href="https://www.khoury.northeastern.edu/">Northeastern University</a></h5>
+            <ul>
+                <li><h5><a href="https://www.khoury.northeastern.edu/">Northeastern University MSCS</a></h5></li>
+           <li><h5><a href="https://ler.illinois.edu/">University of Illinois Urbana-Champaign MHRIR</a></h5></li>
+            </ul>
             <h1><span>Full Stack Developer</span></h1>
             <div class="download">
                 <h5><a href="/assets/Ledi_Resume.pdf"><i class="ri-download-line"></i>download resume</a></h5>
             </div>
         </div>
-        <div>
-            <img src="/assets/profile_image.jpg" alt="profile photo" class="profile-image">
-        </div>
+
     </section>
 </body>
 </html>
