adjust home page and creat nav bar for another pages

--- a/pages/more.html
+++ b/pages/more.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>More</title>
     <link rel="stylesheet" href="/styles/home.css">
 
     <!---goole fonts-->
@@ -21,7 +21,6 @@
     rel="stylesheet"
 />
 </head>
-
 <body>
     <header >
         <div class="logo">
@@ -30,30 +29,13 @@
         </div>
 
         <ul class="nav-links">
-            <li class="active"><a href="#">Home</li>
+            <li><a href="/">Home</li>
             <li><a href="/pages/projects.html">Projects</li>
             <li><a href="/pages/contact.html">Contact</li>
-            <li><a href="/pages/more.html">More</li>
+            <li class="active"><a href="/pages/more.html">More</li>
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
-
-
-
-    <section class="profile" id="profile">
-        <div>
-            <img src="/assets/profile_image.jpg" alt="profile photo" class="profile-image">
-        </div>
-
-        <div class="profile-text">
-            <h1><span>Graudate Student</span></h1>
-                <h5><a href="https://www.khoury.northeastern.edu/">Northeastern University MSCS(2023-2025)</a></h5>
-                <h5><a href="https://ler.illinois.edu/">University of Illinois Urbana-Champaign MHRIR(2021-2022)</a></h5>
-            <h1><span>Full Stack Developer</span></h1>
-            <div class="download">
-                <h5><a href="/assets/Ledi_Resume.pdf"><i class="ri-download-line"></i>download resume</a></h5>
-            </div>
-        </div>
-    </section>
+    
 </body>
 </html>
