finish the MORE page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,7 +35,7 @@
             <li><a href="/pages/contact.html">Contact</li>
             <li><a href="/pages/more.html">More</li>
         </ul>
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <!-- <div class="bx bx-menu" id="menu-icon"></div> -->
     </header>
 </body>
 </html>
