--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <li><a href="/pages/contact.html">Contact</li>
             <li><a href="/pages/more.html">More</li>
         </ul>
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <!-- <div class="bx bx-menu" id="menu-icon"></div> -->
     </header>
 
 
 
     <section class="profile" id="profile">
-        <div>
-            <img src="/assets/profile_image.jpg" alt="profile photo" class="profile-image">
+        <div class="profile-image">
+            <img src="/assets/profile_image.jpg" alt="profile photo" >
         </div>
 
         <div class="profile-text">
