finish contact page and more page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,8 +34,33 @@
             <li class="active"><a href="/pages/contact.html">Contact</li>
             <li><a href="/pages/more.html">More</li>
         </ul>
-        <div class="bx bx-menu" id="menu-icon"></div>
     </header>
+
+    <section id="contacts">
+    <h3 class="contact-title">Contact Me</h3>
+    <div class="contact-container">
+        <div class="info-item">
+            <div class="email-icon">
+                <img src="/assets/mail-line.png"/>
+                <h4 class="contact-name"><a href="mailto:li.led@northeastern.edu" >li.led@northeastern.edu</a></h4>
+            </div>
+        </div>
+
+        <div class="info-item">
+            <div class="Github-icon">
+                <img src="/assets/github-line.png"/>
+                <h4 class="contact-name"><a href="https://github.com/ledili2424">Github Home Page</a></h4>
+            </div>
+        </div>
+
+        <div class="info-item">
+            <div class="Linkedin-icon">
+                <img src="/assets/linkedin-box-line.png"/>
+                <h4 class="contact-name"><a href="https://www.linkedin.com/in/ledi-li-lydia/">Linkedin Profile</a></h4>
+            </div>
+        </div>
+    </div>
+</section>
     
 </body>
 </html>
