--- a/pages/more.html
+++ b/pages/more.html
@@ -34,17 +34,16 @@
             <li><a href="/pages/contact.html">Contact</li>
             <li class="active"><a href="/pages/more.html">More</li>
         </ul>
-        <!-- <div class="bx bx-menu" id="menu-icon"></div> -->
     </header>
 
-    <div class="hobby-content">
-        <section id="hobbies" class="section">
-            <h3>Hobbies</h3>
+
+        <section id="hobbies">
+            <h3 class="hobbies-title">Hobbies</h3>
             <div class="hobbies-list">
                 <div class="hobby">
                     <h4>Watching Movies</h4>
                     <div class="favorite">
-                        <p>Favorite Movies</p>
+                        <p class="subtitle">Favorite Movies</p>
                     <ul>
                         <li>Le Fabuleux Destin d'Amélie Poulain (France)</li>
                         <li>Yi Yi (Taiwan)</li>
@@ -60,7 +59,7 @@
                 <div class="hobby">
                     <h4>Listening to J-POP</h4>
                     <div class="favorite">
-                        <p>Favorite Singers</p>
+                        <p class="subtitle">Favorite Singers</p>
                         <ul>
                             <li>Vaundy</li>
                             <li>Sheena Ringo</li>
@@ -71,7 +70,7 @@
                     </div>
                    
                     <div class="favorite">
-                        <p>Favorite Bands</p>
+                        <p class="subtitle">Favorite Bands</p>
                         <ul>
                             <li>King Gnu</li>
                             <li>Tokyo Incidents</li>
@@ -83,7 +82,7 @@
                 <div class="hobby">
                     <h4>Traveling</h4>
                     <div class="favorite">
-                        <p>Countries Visited</p>
+                        <p class="subtitle">Countries Visited</p>
                         <ul>
                             <li>Japan, Thailand, Singapore, Korean</li>
                             <li>The United States, Mexico</li>
@@ -96,7 +95,7 @@
                 <div class="hobby">
                     <h4>Language Learning</h4>
                     <div class="favorite">
-                        <p>Languages I Know</p>
+                        <p class="subtitle">Languages I Know</p>
                         <ul>
                             <li>Mandarin, Nanchang Dialect, Cantonese</li>
                             <li>English, German, Japanese</li>
@@ -106,7 +105,7 @@
                 </div>
             </div>
         </section>
-    </div>
+
     
 </body>
 </html>
