finish project page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Poppins:wght@300;400;500;600;700&family=Sono:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!---boxicon-->
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
     <!--remixicon-->
     <link
@@ -30,12 +27,11 @@
         </div>
 
         <ul class="nav-links">
-            <li class="active"><a href="#">Home</li>
-            <li><a href="/pages/projects.html">Projects</li>
-            <li><a href="/pages/contact.html">Contact</li>
-            <li><a href="/pages/more.html">More</li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/pages/projects.html">Projects</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/pages/more.html">More</a></li>
         </ul>
-        <!-- <div class="bx bx-menu" id="menu-icon"></div> -->
     </header>
 
 
@@ -51,7 +47,8 @@
                 <h5><a href="https://ler.illinois.edu/">University of Illinois Urbana-Champaign MHRIR(2021-2022)</a></h5>
             <h1><span>Full Stack Developer</span></h1>
             <div class="download">
-                <h5><a href="/assets/Ledi_Resume.pdf"><i class="ri-download-line"></i>download resume</a></h5>
+                <h5><a href="/assets/Ledi_Resume.pdf"><i class="ri-download-line"></i>Download Resume</a></h5>
+            
             </div>
         </div>
     </section>
