--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,10 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Poppins:wght@300;400;500;600;700&family=Sono:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!---boxicon-->
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
     <!--remixicon-->
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
@@ -29,15 +25,15 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="/">Home</li>
-            <li><a href="/pages/projects.html">Projects</li>
-            <li class="active"><a href="/pages/contact.html">Contact</li>
-            <li><a href="/pages/more.html">More</li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/pages/projects.html">Projects</a></li>
+            <li class="active"><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/pages/more.html">More</a></li>
         </ul>
     </header>
 
     <section id="contacts">
-    <h3 class="contact-title">Contact Me</h3>
+    <h3 class="contacts-title">Contact Me</h3>
     <div class="contact-container">
         <div class="info-item">
             <div class="email-icon">
