--- a/pages/more.html
+++ b/pages/more.html
@@ -11,9 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Poppins:wght@300;400;500;600;700&family=Sono:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!---boxicon-->
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
     <!--remixicon-->
     <link
@@ -29,10 +26,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="/">Home</li>
-            <li><a href="/pages/projects.html">Projects</li>
-            <li><a href="/pages/contact.html">Contact</li>
-            <li class="active"><a href="/pages/more.html">More</li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/pages/projects.html">Projects</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
+            <li class="active"><a href="/pages/more.html">More</a></li>
         </ul>
     </header>
 
