finish the responsive design for mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 
-    <section class="profile" id="profile">
+    <section id="profile">
         <div class="profile-image">
             <img src="/assets/profile_image.jpg" alt="profile photo" >
         </div>
